--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -13,3 +13,11 @@ dependencies:
   name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
   version: 2.3.85
+- alias: dreamteam-public-api-a
+  name: dreamteam-public-api
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.564
+- alias: dreamteam-public-api-b
+  name: dreamteam-public-api
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.564
